my first commit

--- a/index.html
+++ b/index.html
@@ -24,11 +24,109 @@
     <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="google-site-verification" content="">
     <meta property="" content="">
+    <style>
+        #nav1
+        {
+
+            background-color: #0298c8;
+        }
+        #nav1 li
+        {
+        float:left;
+            background-color: #0298c8;
+            padding: 2%;
+            text-decoration: none;
+            color: #ffffff;
+
+        }
+
+        #nav1 li a {
+color:#0298c8;
+            background-color: #ffffff;
+        }
+
+    </style>
     </head>
 <body class="">
     <div id="page-border">
 		<div id="wrap" class="container">
 			<header id="header" class="clearfix section">
+
+
+
+
+
+
+
+
+
+
+
+
+                <nav role="navigation" class="navbar navbar-inverse" style="background-color: none;">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button  type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                            <span align="left" class="sr-only">Home</span>
+
+                        </button>
+                        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                            <span class="sr-only">Work</span>
+
+                        </button>
+                        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                            <span class="sr-only">About</span>
+
+                        </button>
+                        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                            <span class="sr-only">Jobs</span>
+
+                        </button>
+                        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                            <span class="sr-only">Contact</span>
+
+                        </button>
+
+
+                    </div>
+
+                </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                <!--
+                <nav class="navbar navbar-default" role="navigation">
+
+         <div class="container">
+             <div class="collapse navbar collapse">
+                 <ul id="nav1" class="nav navbar-nav pull-left">
+                   <li><a>Home</a></li>
+                     <li><a>Work</a></li>
+                     <li><a>About</a></li>
+                     <li><a>Feed</a></li>
+                     <li><a>Jobs</a></li>
+                     <li><a>Contact</a></li>
+
+                 </ul>
+                 <img src="images/logo-ie6.png" height="6%" width="6%">
+
+             </div>
+
+         </div>
+                </nav>-->
+                <!--
 				<nav id="nav" class="center grid-14">
 					<div class="fonts-display clearfix">
                         <p class="logo mq-mobile-i-block">
